--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
 				<div class="form">
 					<form name="login">
 						<input type="text" name="username" placeholder="Username"><br>
-						<input type="password" name="pwd1" placeholder="Password"><br>
+						<input type="password" name="pwd" placeholder="Password"><br>
 						<br>
 						<input type="submit" value="Login">
 					</form>
